--- a/PierreVandO/Views/Orders/New.cshtml
+++ b/PierreVandO/Views/Orders/New.cshtml
@@ -6,16 +6,23 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	</head>
 	<body>
-		<h3>Input the new Vendor's Information in the following form at your leisure, Pierre.</h3>
-		<form action="/vendors" method="post">
-			<label for="vendorName">Vendor/Business Name</label>
-			<input id="vendorName" name="vendorName" type="text">
-			<label for="vendorDesc">A description of the vendor.  Be honest.</label>
-			<input id="vendorDesc" name="vendorDesc" type="textarea">
-			<button type="submit">Add new Vendor</button>
+		<h2>New order with @Model.VendorName</h2>
+		<h3>Input the following to make a useful little note of your transaction with @Model.VendorName</h3>
+		<form action="/vendors/@Model.VendorId" method="post">
+			<label for="name">A Label or Title for the transaction (Keep it short yet memorable, Pierre.)</label>
+			<input id="name" name="name" type="text">
+			<label for="desc">A description of the transaction.  Items and quantities, how you felt while ringing it up.  Whatever you wish.</label>
+			<input id="desc" name="desc" type="textarea">
+			<label for="price">The final price of the transaction.  I won't do the math for you.  I apologize.</label>
+			<input id="price" name="price" type="text">
+			<label for="date">The date of the transaction.  Be as vague or specific as you wish.</label>
+			<input id="date" name="date" type="text">
+			<button type="submit">Add new Order</button>
 		</form>
 
 		<p><a href="/">Back to where you began.</a></p>
 		<p><a href="/vendors">Back to your vendors.</a></p>
+		<p><a href="/vendors/new">Add a new vendor.</a></p>
+		<p><a href="/vendors/@Model.VendorId">View @Model.VendorId's orders.</a></p>
 	</body>
 </html>
