--- a/PierreVandO/Views/Orders/Show.cshtml
+++ b/PierreVandO/Views/Orders/Show.cshtml
@@ -1,23 +1,11 @@
-<!DOCTYPE html>
-<html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<title>Pierre's Vendor/Order Tracker</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	</head>
-	<body>
-		@using PierreVandO.Models;
-		<h2>@Model["order"].OrderName</h3>
-		<p>Placed from @Model["vendor"].VendorName on the following date: @Model["order"].OrderDate</p>
-		<h4><strong>Order Summary:</strong></h4>
-		<p>@Model["order"].OrderDesc</p>
-		<p><strong>Final Price:</strong></p>
-		<p>@Model["order"].OrderPrice</p>
-		
-		<p><a href='/vendors/@Model["vendor"].VendorId/orders/new'>Add a new order through this vendor.</a></p>
-		<p><a href="/">Where you began.</a></p>
-		<p><a href="/vendors">Your vendors.</a></p>
-		<p><a href="/vendors/new">Add a new vendor.</a></p>
-
-	</body>
-</html>
+@{
+	Layout = "_Layout";
+}
+@using PierreVandO.Models;
+<h2>@Model["order"].OrderName</h3>
+<p>Placed from @Model["vendor"].VendorName on the following date: @Model["order"].OrderDate</p>
+<h4><strong>Order Summary:</strong></h4>
+<p>@Model["order"].OrderDesc</p>
+<p><strong>Final Price:</strong></p>
+<p>@Model["order"].OrderPrice</p>
+<p><a href='/vendors/@Model["vendor"].VendorId/orders/new'>Add a new order through this vendor.</a></p>
