bugfix: fix CSS not displaying; razor display error

--- a/PierreVandO/Views/Shared/_Layout.cshtml
+++ b/PierreVandO/Views/Shared/_Layout.cshtml
@@ -8,7 +8,9 @@
   </head>
   <body>
 		@await Html.PartialAsync("Header")
+		<div id="wrapper">
     @RenderBody()
+		</div>
 		@await Html.PartialAsync("Footer")
   </body>
 </html>
