--- a/PierreVandO/Views/Orders/New.cshtml
+++ b/PierreVandO/Views/Orders/New.cshtml
@@ -14,4 +14,4 @@
 	<input id="date" name="date" type="text">
 	<button type="submit">Add new Order</button>
 </form>
-<p><a href="/vendors/@Model.VendorId">View @Model.VendorId's orders.</a></p>
+<p><a href="/vendors/@Model.VendorId">View @Model.VendorName's orders.</a></p>
